# PictureWeb

./: .gitignore  Cargo.toml  README.md  bash.sh  random.html  u1.html  upload.html
html/: random.html  upload.html
images/: bash.sh
src/: main.rs
tmp/: readme.md
