[package]
name = "picture_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.1"
image-base64 = "0.1"
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["v4"] }
actix-multipart="0.4.0"
futures="0.3.21"
sanitize-filename = "0.4.0"
serde_json = "1.0.70"
